--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC5</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorBlue">#063772</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGray">#B5B5B5</color>
+    <color name="colorRed">#FF1100</color>
+    <color name="colorOrange">#FF9800</color>
+    <color name="colorBackgroundMain">#2C3030</color>
+    <color name="colorBlack_1">#383838</color>
+    <color name="color_777777">#777777</color>
+    <color name="color_1DB854">#1DB854</color>
+    <color name="color_C81DB854">#9C1DB854</color>
+    <color name="color_404747">#404747</color>
+    <color name="color_2C3030">#2C3030</color>
+    <color name="color_FB5A07">#FB5A07</color>
+    <color name="color_FD921A">#FD921A</color>
+
+    <color name="color_7F00FF">#7F00FF</color>
+    <color name="color_5B86E5">#5B86E5</color>
+
+
+    <color name="color_799F0C">#799F0C</color>
+    <color name="transparent">#00FFFFFF</color>
+
 </resources>
